--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,108 @@
 <!DOCTYPE HTML>
 <html>
  <head>
-  <title>Flask-SocketIO Test</title>
-   <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.5/socket.io.min.js"></script>
+  <title>Skuskove zadanie</title>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.5/socket.io.min.js"></script>
+      <link rel="stylesheet" href="static/libs/jquery-ui.min.css">
+      <script src="static/libs/plotly-latest.min.js"></script>
+      <script src="static/libs/jquery-3.2.1.min.js"></script>
+      <script src="static/libs/jquery-ui.min.js"></script>
+      <script src="static/libs/gauge.min.js"></script>
+
    <script type="text/javascript" charset="utf-8">
+    $( function() {
+        $( "#tabs" ).tabs({
+          event: "mouseover"
+        });
+      } );
      $(document).ready(function() {
+    
+       
+   var gauge = new RadialGauge({
+          renderTo: 'canvasID',
+          width: 300,
+          height: 300,
+          units: "Km/h",
+          minValue: 0,
+          maxValue: 1,
+          majorTicks: [
+              "0",
+              "0.1",
+              "0.2",
+              "0.3",
+              "0.4",
+              "0.5",
+              "0.6",
+              "0.7",
+              "0.8",
+              "0.9",
+              "1.0"
+          ],
+          minorTicks: 2,
+          strokeTicks: true,
+          highlights: [
+              {
+                  "from": 0.5,
+                  "to": 1,
+                  "color": "rgba(200, 50, 50, .75)"
+              }
+          ],
+          colorPlate: "#fff",
+          borderShadowWidth: 0,
+          borders: false,
+          needleType: "arrow",
+          needleWidth: 2,
+          needleCircleSize: 7,
+          needleCircleOuter: true,
+          needleCircleInner: false,
+          animationDuration: 1500,
+          animationRule: "linear"
+      });
+      gauge.draw();
+      gauge.value = "0";    
+       
       namespace = '/test';
       var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
-
+      var x = new Array();
+      var y = new Array();
+      var z = new Array();
+      var trace;
+      var layout;
+      
       socket.on('connect', function() {
         socket.emit('my_event', {data: 'I\'m connected!', value: 1}); });
 
       socket.on('my_response', function(msg) {
         console.log(msg.data);
-        $('#log').append('Received #'+msg.count+': '+msg.data+'<br>').html(); });
+        $('#log').append('Received #'+msg.count+': '+msg.data+'<br>').html(); 
+        
+        x.push(parseFloat(msg.count));
+        y.push(parseFloat(msg.data));
+        gauge.value = msg.data; 
+
+        console.log("data x ",y)
+        console.log("data y ",x)
+
+        trace = {
+            x: x,
+            y: y,
+            name:'grafy',
+        };       
+        layout = {
+          title: 'Data',
+          xaxis: {
+              title: 'x',
+          },
+          yaxis: {
+              title: 'y',
+              //range: [-1,1]
+          }
+        };
+        console.log(trace);
+        var traces = new Array();
+        traces.push(trace);
+        Plotly.newPlot($('#plotdiv')[0], traces, layout);
+      });
 
       $('form#emit').submit(function(event) {
           socket.emit('my_event', {value: $('#emit_value').val()});
@@ -48,7 +136,29 @@
   <form id="disconnect" method="POST" action="#">
     <input type="submit" value="Disconnect">
   </form> 
-  <h2>Receive:</h2>
-  <div id="log"></div>
+
+  
+      <div id="tabs">
+      <ul>
+        <li><a href="#tabs-1">Received data</a></li>
+        <li><a href="#tabs-2">Graf</a></li>
+        <li><a href="#tabs-3">Cifernik</a></li>
+      </ul>
+      <div id="tabs-1">
+          <h2>Receive:</h2>
+          <div id="log"></div>
+      </div>
+      <div id="tabs-2">
+        <h2>Graf:</h2>
+        <div id="plotdiv" style="width:600px;height:250px;"></div>
+
+      </div>
+      <div id="tabs-3">
+        <h2>Cifernik:</h2>
+		  <canvas id="canvasID"></canvas>
+
+      </div>
+    </div>
+  
  </body>
 </html>
